"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-02-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38:
	  cflat -strengths now also computes strongest-single-path
		drive strength ('one'), along with min,max.
	  Test cases updated.


2008-02-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-37:
	  Experimental: cflat mode to compute and print minimum
		and maximum drive strengths for every rule.
		Documented, and somewhat tested.
	  prs macros: turned off negative value checking for macros
		as a temporary workaround to support strength deduction
		AND prs-literal extra (bogus) parameter for transistor type.


2008-02-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-36:
	  prsim command: 'why-not', recursively figures out why a
		node is NOT a given value, following fanins and exprs.
		This pretty much performs deadlock analysis, 
		and any other query for "why isn't this doing what I
		think it should be doing?"
		This would've been useful years ago...
	  Documented, and well tested with cases in prsim/ and lib/.
	  prsim/TODO -- one item down!


2008-02-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-35:
	  prism::why-x: now prune already-visited backtrace paths, 
		makes output much more scalable and comprehensible for huge
		directed-acyclic clouds of X nodes.  
	  Tested in lib/ on token-ring structures.  


	* HACKT-00-01-04-main-00-82-02-ACT-03-34:
	  prsim command: 'why-x', recursively traces back the source of
		signals in the X state, through other X signals, 
		and other related diagnostics, also detects cycles. 
		TODO: maintain a global set for pruning.  
	  Documented and minimally tested with new test cases.  
	  Coming soon: 'why-not' [01]

