@@ -1,5 +1,5 @@
 @c "hacprsim/usage.texi"
-@c $Id: usage.texi,v 1.2 2007/09/13 01:14:00 fang Exp $
+@c $Id: usage.texi,v 1.2.14.1 2008/02/15 04:43:24 fang Exp $
 
 @node Usage
 @chapter Usage
@@ -8,6 +8,7 @@
 @strong{FYI:} the documentation here is extracted from source file
 @file{main/prsim.cc}.  
 
+@include opt/option-a.texi
 @include opt/option-b.texi
 @include opt/option-d.texi
 @include opt/option-f.texi
