@@ -1,0 +1,6 @@
+time: 20
+	20	a : 1
+	30	b : 0	[by a:=1]
+	40	c : 1	[by b:=0]
+time: 40
+success! 
